Cleaned up code. Added profile image. Fixed sidenav issue so that it will only open on small screens like a mobile device.

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,11 @@
 }
 
 .profile-icon {
-	width: 100%;
-	height: 100%; 
+	margin-top: 3px;
+	border-radius: 100%;
+	border: 2px solid #ddd;
+	width: 90%;
+	height: 90%; 
 }
 
 md-sidenav {
